hard-gists/6258303/run.log
=== Docker Run Log for 6258303 ===
Started at: Mi 29. Okt 16:27:13 CET 2025

[2025-10-29 16:27:14] START: Running container for 6258303
[2025-10-29 16:27:14] SUCCESS: Container 7e07dc81e5237930c5c6bd32fb09135e63de77ecb796064882f6d3c1e1c5573d started for 6258303
=== Container logs for 6258303 ===
  File "/snippet.py", line 50
    print "usage: generate_clut input_image clut.png"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6258303 ===
[2025-10-29 16:27:16] INFO: Container 7e07dc81e5237930c5c6bd32fb09135e63de77ecb796064882f6d3c1e1c5573d has stopped
